app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-ui
  namespace: clahanstore
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: frontend-ui
  template:
    metadata:
      labels:
        app: frontend-ui
    spec:
      containers:
      - name: frontend-ui
        image: team4devops/ecommerce-frontend-ui:v1.0.0
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 9m
            memory: 32Mi
          limits:
            cpu: 250m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: clahanstore
spec:
  selector:
    app: api-gateway
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-ui
  namespace: clahanstore
spec:
  selector:
    app: frontend-ui
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
---
