httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: clahanstore
spec:
  parentRefs:
  - name: ecommerce-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api
    backendRefs:
    - name: api-gateway
      port: 3000
  - matches:
    - path:
        type: PathPrefix
        value: /user
    backendRefs:
    - name: user-service
      port: 3001
  - matches:
    - path:
        type: PathPrefix
        value: /search
    backendRefs:
    - name: search-service
      port: 3004
  - matches:
    - path:
        type: PathPrefix
        value: /inventory
    backendRefs:
    - name: inventory-service
      port: 3005
  - matches:
    - path:
        type: PathPrefix
        value: /admin
    backendRefs:
    - name: admin-service
      port: 3014
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend-ui
      port: 80
